JBTM-845 Enable config properties to be set via a standard jbossts-properties XML file